[gd_scene load_steps=8 format=2]

[ext_resource path="res://UserInterface/TownHud/prefabs/ExpeditionDialog.gd" type="Script" id=1]
[ext_resource path="res://UserInterface/fonts/poppins_ui_text.tres" type="DynamicFont" id=2]
[ext_resource path="res://UserInterface/fonts/poppins-descr-16-0.tres" type="DynamicFont" id=3]
[ext_resource path="res://UserInterface/assets/ui_background_nineslice.png" type="Texture" id=4]
[ext_resource path="res://UserInterface/assets/UIGradientTexture.tres" type="Texture" id=5]
[ext_resource path="res://UserInterface/fonts/popins-header-18-3.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.0196078, 0.0196078, 0.0196078, 0.501961 )
grow_begin = -16.0
grow_end = -16.0

[node name="ExpeditionDialog" type="Control"]
anchor_bottom = 1.0
rect_min_size = Vector2( 320, 720 )
mouse_filter = 2
input_pass_on_modal_close_click = false
size_flags_horizontal = 5
size_flags_vertical = 5
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 24
custom_constants/margin_top = 152
custom_constants/margin_left = 24
custom_constants/margin_bottom = 152

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_left = 24.0
margin_top = 152.0
margin_right = 296.0
margin_bottom = 568.0
mouse_filter = 0
texture = ExtResource( 4 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="TextureRect" type="TextureRect" parent="MarginContainer/NinePatchRect"]
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = 133.0
margin_top = 3.0
margin_right = 540.0
margin_bottom = 268.0
rect_rotation = 90.0
mouse_filter = 0
texture = ExtResource( 5 )
expand = true

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
visible = false
margin_left = 24.0
margin_top = 152.0
margin_right = 296.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0196078, 0.0196078, 0.0196078, 0.752941 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 24.0
margin_top = 152.0
margin_right = 296.0
margin_bottom = 568.0
custom_constants/separation = 8

[node name="TopMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 272.0
margin_bottom = 54.0
custom_constants/margin_right = 8
custom_constants/margin_top = 16
custom_constants/margin_left = 8
custom_constants/margin_bottom = 12

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/TopMargin"]
visible = false
margin_left = 8.0
margin_top = 16.0
margin_right = 264.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TopMargin"]
unique_name_in_owner = true
margin_left = 8.0
margin_top = 16.0
margin_right = 264.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 6 )
text = "Event Title Here"
align = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 272.0
margin_bottom = 66.0
custom_constants/separation = 4
custom_styles/separator = SubResource( 1 )

[node name="InfoMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 272.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 12
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/InfoMargin"]
visible = false
margin_left = 16.0
margin_top = 12.0
margin_right = 256.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/InfoMargin"]
margin_left = 16.0
margin_top = 12.0
margin_right = 256.0
margin_bottom = 238.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="DescrLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoMargin/MarginContainer"]
unique_name_in_owner = true
margin_left = 8.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Some Info about the event goes here. In to a long text box that wraps."
autowrap = true

[node name="OptionsMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 336.0
margin_right = 272.0
margin_bottom = 416.0
custom_constants/margin_right = 16
custom_constants/margin_top = 24
custom_constants/margin_left = 16
custom_constants/margin_bottom = 24

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/OptionsMargin"]
visible = false
margin_left = 16.0
margin_top = 24.0
margin_right = 256.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.956863, 0.968627, 0.980392, 0.12549 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/OptionsMargin"]
margin_left = 16.0
margin_top = 24.0
margin_right = 256.0
margin_bottom = 56.0
size_flags_horizontal = 11
size_flags_vertical = 3
custom_constants/separation = 24

[node name="LeaveButton" type="Button" parent="MarginContainer/VBoxContainer/OptionsMargin/HBoxContainer"]
unique_name_in_owner = true
margin_right = 108.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "leave"

[node name="ExploreButton" type="Button" parent="MarginContainer/VBoxContainer/OptionsMargin/HBoxContainer"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 240.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "explore"
